methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:13: error: Unmatched closing brace '}' ignored here
}
^