methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit : Boolean = false
  for (i<- 1 to 6) {
    avance()
    if (estSurBiscuit() == true)
    vuBiscuit = true
  }recule(6)
  return vuBiscuit
    
  }
}